--- a/src/css/main.css
+++ b/src/css/main.css
@@ -128,8 +128,10 @@
 
 .mainListOfFlats {
     display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
+    /* justify-content: space-around; */
+    /* flex-flow: row wrap; */
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(89, 226, 112);
 }
 
