--- a/src/css/bookmarks.css
+++ b/src/css/bookmarks.css
@@ -1,6 +1,6 @@
 .bookmarks {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(89, 226, 112);
 }
 
@@ -10,6 +10,7 @@
 
 .bookmarks__flatList {
     display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(89, 226, 112);
 }
